--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\..\programme\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,9 +78,16 @@
     <Compile Include="Form_eleve.Designer.cs">
       <DependentUpon>Form_eleve.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_gestion_tache.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_gestion_tache.Designer.cs">
+      <DependentUpon>Form_gestion_tache.cs</DependentUpon>
+    </Compile>
     <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="taches.cs" />
     <Compile Include="utilisateur.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -87,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_eleve.resx">
       <DependentUpon>Form_eleve.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_gestion_tache.resx">
+      <DependentUpon>Form_gestion_tache.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
