26/02 grosse modification du programme

--- a/WindowsForm/extranet_projet_s4/App.config
+++ b/WindowsForm/extranet_projet_s4/App.config
@@ -6,6 +6,6 @@
     <appSettings>
       <!-- POUR LA CHAINE DE CONNEXION A LA BASE DE DONNEE-->
       <add key="serveur" value="localhost" />
-      <add key="database" value="projets4"/>
+      <add key="database" value="extranet"/>
     </appSettings>
 </configuration>
