--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -66,11 +66,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="emploi_temps.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Form_AdminMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form_AdminMain.designer.cs">
+      <DependentUpon>Form_AdminMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_login.Designer.cs">
+      <DependentUpon>Form_login.cs</DependentUpon>
     </Compile>
     <Compile Include="Form_choix_admin_eleve.cs">
       <SubType>Form</SubType>
@@ -90,13 +96,22 @@
     <Compile Include="Form_gestion_tache.Designer.cs">
       <DependentUpon>Form_gestion_tache.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_AdminGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_AdminGestion.designer.cs">
+      <DependentUpon>Form_AdminGestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="taches.cs" />
     <Compile Include="utilisateur.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form_AdminMain.resx">
+      <DependentUpon>Form_AdminMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_login.resx">
+      <DependentUpon>Form_login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_choix_admin_eleve.resx">
       <DependentUpon>Form_choix_admin_eleve.cs</DependentUpon>
@@ -106,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_gestion_tache.resx">
       <DependentUpon>Form_gestion_tache.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_AdminGestion.resx">
+      <DependentUpon>Form_AdminGestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
