--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -96,11 +96,11 @@
     <Compile Include="Form_gestion_tache.Designer.cs">
       <DependentUpon>Form_gestion_tache.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_AdminGestion.cs">
+    <Compile Include="Form_AdminGestionUser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_AdminGestion.designer.cs">
-      <DependentUpon>Form_AdminGestion.cs</DependentUpon>
+    <Compile Include="Form_AdminGestionUser.designer.cs">
+      <DependentUpon>Form_AdminGestionUser.cs</DependentUpon>
     </Compile>
     <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
@@ -122,8 +122,8 @@
     <EmbeddedResource Include="Form_gestion_tache.resx">
       <DependentUpon>Form_gestion_tache.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_AdminGestion.resx">
-      <DependentUpon>Form_AdminGestion.cs</DependentUpon>
+    <EmbeddedResource Include="Form_AdminGestionUser.resx">
+      <DependentUpon>Form_AdminGestionUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
