--- a/WindowsForm/extranet_projet_s4/App.config
+++ b/WindowsForm/extranet_projet_s4/App.config
@@ -5,6 +5,7 @@
     </startup>
     <appSettings>
       <!-- POUR LA CHAINE DE CONNEXION A LA BASE DE DONNEE-->
+      <!--<add key="serveur" value="172.16.0.8" />-->
       <add key="serveur" value="localhost" />
       <add key="database" value="extranet"/>
     </appSettings>
