gros changements pour les taches

--- a/WindowsForm/extranet_projet_s4/App.config
+++ b/WindowsForm/extranet_projet_s4/App.config
@@ -8,5 +8,9 @@
       <!--<add key="serveur" value="172.16.0.8" />-->
       <add key="serveur" value="localhost" />
       <add key="database" value="extranet"/>
+    
+      <!-- _________PREFERENCES UTILISATEUR ___________ -->
+      <!-- Nombre de jours pour la notif bientot date butoire d'une tache -->
+      <add key="nb_jours_notif" value="2"/>
     </appSettings>
 </configuration>
