--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Form_AdminMain.designer.cs">
       <DependentUpon>Form_AdminMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_APropos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_APropos.Designer.cs">
+      <DependentUpon>Form_APropos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_AdminMain.resx">
       <DependentUpon>Form_AdminMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_APropos.resx">
+      <DependentUpon>Form_APropos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_login.resx">
       <DependentUpon>Form_login.cs</DependentUpon>
