modif pour paramètres de tâches

--- a/WindowsForm/extranet_projet_s4/App.config
+++ b/WindowsForm/extranet_projet_s4/App.config
@@ -11,6 +11,8 @@
     
       <!-- _________PREFERENCES UTILISATEUR ___________ -->
       <!-- Nombre de jours pour la notif bientot date butoire d'une tache -->
-      <add key="nb_jours_notif" value="2"/>
+      <add key="nb_jours_notif" value="3"/>
+      <!-- Nombre de jours pour la supression d'une tache réalisée-->
+      <add key="nb_jours_supression" value="7"/>
     </appSettings>
 </configuration>
