--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -51,11 +51,13 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
       <HintPath>..\..\programme\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -76,6 +78,12 @@
     </Compile>
     <Compile Include="Form_acces_rapide_taches.Designer.cs">
       <DependentUpon>Form_acces_rapide_taches.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_AdminAssignerNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_AdminAssignerNote.Designer.cs">
+      <DependentUpon>Form_AdminAssignerNote.cs</DependentUpon>
     </Compile>
     <Compile Include="Form_AdminAssignerProf.cs">
       <SubType>Form</SubType>
@@ -163,11 +171,20 @@
     </Compile>
     <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectInstaller.Designer.cs">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="taches.cs" />
     <Compile Include="utilisateur.cs" />
     <EmbeddedResource Include="Form_acces_rapide_taches.resx">
       <DependentUpon>Form_acces_rapide_taches.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_AdminAssignerNote.resx">
+      <DependentUpon>Form_AdminAssignerNote.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_AdminAssignerProf.resx">
       <DependentUpon>Form_AdminAssignerProf.cs</DependentUpon>
