--- a/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/extranet_projet_s4.csproj
@@ -142,6 +142,12 @@
     <Compile Include="Form_APropos.Designer.cs">
       <DependentUpon>Form_APropos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_choix_admin_prof.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_choix_admin_prof.Designer.cs">
+      <DependentUpon>Form_choix_admin_prof.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,12 @@
     </Compile>
     <Compile Include="Form_paramestres_taches.Designer.cs">
       <DependentUpon>Form_paramestres_taches.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_professeur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_professeur.Designer.cs">
+      <DependentUpon>Form_professeur.cs</DependentUpon>
     </Compile>
     <Compile Include="login.cs" />
     <Compile Include="Program.cs" />
@@ -228,6 +240,9 @@
     <EmbeddedResource Include="Form_APropos.resx">
       <DependentUpon>Form_APropos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form_choix_admin_prof.resx">
+      <DependentUpon>Form_choix_admin_prof.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_login.resx">
       <DependentUpon>Form_login.cs</DependentUpon>
     </EmbeddedResource>
@@ -248,6 +263,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_paramestres_taches.resx">
       <DependentUpon>Form_paramestres_taches.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_professeur.resx">
+      <DependentUpon>Form_professeur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
