--- a/WindowsForm/extranet_projet_s4/intranet_projet_s4.csproj
+++ b/WindowsForm/extranet_projet_s4/intranet_projet_s4.csproj
@@ -148,6 +148,12 @@
     <Compile Include="Form_choix_admin_prof.Designer.cs">
       <DependentUpon>Form_choix_admin_prof.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_FTP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_FTP.Designer.cs">
+      <DependentUpon>Form_FTP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_informations_seance.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -249,6 +255,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_choix_admin_prof.resx">
       <DependentUpon>Form_choix_admin_prof.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_FTP.resx">
+      <DependentUpon>Form_FTP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_informations_seance.resx">
       <DependentUpon>Form_informations_seance.cs</DependentUpon>
