--- a/WindowsForm/extranet_projet_s4/App.config
+++ b/WindowsForm/extranet_projet_s4/App.config
@@ -6,7 +6,7 @@
     <appSettings>
       <!-- POUR LA CHAINE DE CONNEXION A LA BASE DE DONNEE-->
       <!--<add key="serveur" value="172.16.0.11" />-->
-      <add key="serveur" value="localhost" />
+      <add key="serveur" value="10.101.0.2" />
       <add key="database" value="extranet"/>
     
       <!-- _________PREFERENCES UTILISATEUR ___________ -->
